--- a/public/article.html
+++ b/public/article.html
@@ -18,7 +18,7 @@
           <svg>
             <use xlink:href="./images/sprite.svg#logo-appsec"></use>
           </svg></a>
-        <div class="header__right"><a class="header__logo header__logo--stingrey" href="#" target="_blank">
+        <div class="header__right"><a class="header__logo header__logo--stingrey header__logo--desktop" href="#" target="_blank">
             <picture>
               <source srcset="./images/logo-stingrey.webp 1x, ./images/logo-stingrey@2x.webp 2x" type="image/webp">
               <source srcset="./images/logo-stingrey.webp 1x, ./images/logo-stingrey@2x.webp 2x" type="image/webp"><img src="./images/logo-stingrey.png" srcset="./images/logo-stingrey.png 1x, ./images/logo-stingrey@2x.png 2x" alt="">
@@ -40,7 +40,11 @@
               <p>Компания AppSec Solutions провела ежегодное исследование защищенности мобильных приложений российских разработчиков.</p>
             </div>
           </div>
-          <div class="hero__image-wrapper">
+          <div class="hero__image-wrapper"><a class="header__logo header__logo--stingrey header__logo--mobile" href="#" target="_blank">
+              <picture>
+                <source srcset="./images/logo-stingrey.webp 1x, ./images/logo-stingrey@2x.webp 2x" type="image/webp">
+                <source srcset="./images/logo-stingrey.webp 1x, ./images/logo-stingrey@2x.webp 2x" type="image/webp"><img src="./images/logo-stingrey.png" srcset="./images/logo-stingrey.png 1x, ./images/logo-stingrey@2x.png 2x" alt="">
+              </picture></a>
             <div class="hero__light hidden">
               <svg>
                 <use xlink:href="./images/sprite.svg#light"></use>
