add starting popup

--- a/public/index.html
+++ b/public/index.html
@@ -1676,9 +1676,12 @@
           </svg>
         </button>
         <div class="form">
-          <div class="form__title">Скачать <br> исследование</div>
-          <div class="form__wrapper">
-            <script type="text/javascript" src="https://www.cnews.ru/inc/form/viewform.php?id=2566&amp;embedded=js" charset="UTF-8"></script>
+          <button class="form__front"><img class="form__bg" src="../images/form-back.jpg" alt=""></button>
+          <div class="form__back">
+            <div class="form__title">Скачать <br> исследование</div>
+            <div class="form__wrapper">
+              <script type="text/javascript" src="https://www.cnews.ru/inc/form/viewform.php?id=2566&amp;embedded=js" charset="UTF-8"></script>
+            </div>
           </div>
         </div>
       </div>
